--- a/plex/pmm/collections/best/movies.yml
+++ b/plex/pmm/collections/best/movies.yml
@@ -1,5 +1,193 @@
 external_templates:
   - repo: templates/collections
   - repo: templates/dynamic_collections
+templates:
+  Series:
+    sort_title: +03_<<collection_name>>
+    sync_mode: sync
+    collection_mode: hide
+    schedule:
+     - weekly(sunday)
+     - hourly(02)
+    
+collections:
+#####################################
+#                MCU                #
+#####################################
 
-# collections:
+  Marvel Cinematic Universe Phase 1:
+    template: {name: Series}
+    letterboxd_list: https://letterboxd.com/goodspeed112/list/marvel-cinematic-universe-phase-1/
+    url_poster: https://theposterdb.com/api/assets/206256
+    collection_order: release
+    sync_mode: sync
+    collection_mode: hide
+    summary: All movies from the Marvel Cinematic Universe Phase 1.
+
+  Marvel Cinematic Universe Phase 2:
+    template: {name: Series}
+    letterboxd_list: https://letterboxd.com/goodspeed112/list/marvel-cinematic-universe-phase-2/
+    url_poster: https://theposterdb.com/api/assets/206257
+    collection_order: release
+    sync_mode: sync
+    collection_mode: hide
+    summary: All movies from the Marvel Cinematic Universe Phase 2.    
+
+  Marvel Cinematic Universe Phase 3:
+    template: {name: Series}
+    letterboxd_list: https://letterboxd.com/goodspeed112/list/marvel-cinematic-universe-phase-3/
+    url_poster: https://theposterdb.com/api/assets/206258
+    collection_order: release
+    sync_mode: sync
+    collection_mode: hide
+    summary: All movies from the Marvel Cinematic Universe Phase 3.
+    
+  Marvel Cinematic Universe Phase 4:
+    template: {name: Series}
+    letterboxd_list: https://letterboxd.com/goodspeed112/list/marvel-cinematic-universe-phase-4/
+    url_poster: https://theposterdb.com/api/assets/206259
+    collection_order: release
+    sync_mode: sync
+    collection_mode: hide
+    summary: All movies from the Marvel Cinematic Universe Phase 4.    
+
+#####################################
+#         IMDB Top 250 Movies       #
+#####################################
+  IMDB Top 250:
+    imdb_chart: top_movies
+    url_poster: https://raw.githubusercontent.com/bradmartti/Plex-Meta-Manager-Configs/master/bradmartti/Posters/Charts/Top_250.JPG
+    sort_title: +01_06_IMDB top 250
+    summary: Top movies of all time
+    collection_order: custom
+    collection_mode: hide
+    schedule:
+     - weekly(sunday)
+     - hourly(02)
+
+#####################################
+#           Trakt Collections       #
+#####################################
+  Most Watched This Week:
+    trakt_watched_weekly: 100
+    sort_title: "+01_05_Watched This Week"
+    sync_mode: sync
+    radarr_add: false
+    url_poster: https://raw.githubusercontent.com/bradmartti/Plex-Meta-Manager-Configs/master/bradmartti/Posters/Charts/Trakt_Weekly.jpg
+    collection_order: custom
+    collection_mode: hide
+    schedule:
+     - weekly(sunday)
+     - hourly(02)
+    
+  Most Watched This Year:
+    trakt_watched_yearly: 250
+    sort_title: "+01_05_Watched This Year"
+    sync_mode: sync
+    radarr_add: false
+    url_poster: https://i.imgur.com/smHhrpE.jpg
+    collection_order: custom
+    collection_mode: hide
+    schedule:
+     - weekly(sunday)
+     - hourly(02)
+    
+  Newly Released (Box Office):
+    sync_mode: sync
+    sort_title: +01_05_<<collection_name>>
+    trakt_boxoffice: true
+    summary: A collection of top movies at the Box Office from Trakt.
+    url_poster: https://i.imgur.com/iLTMGzj.jpg
+    smart_label: release.desc
+    collection_mode: hide
+    radarr_add_missing: false
+    schedule:
+     - weekly(sunday)
+     - hourly(02)
+#########################################################
+#    4K Dolby Vision, 4K HDR & 1080P FHD Collections    #
+#########################################################
+  HDR:
+    plex_search:
+      all:
+        resolution: 4K
+        hdr: true
+    sort_title: +01_09_<<collection_name>>
+    url_poster: https://i.imgur.com/1JGkaL9.jpg
+    filters:
+      has_dolby_vision: false
+
+  1080p:
+    plex_search:
+      all:
+        resolution: 1080p
+        hdr: false
+    sort_title: +01_09_<<collection_name>>
+    url_poster: https://i.imgur.com/y479gbs.jpg
+    filters:
+      has_dolby_vision: false
+      
+  IMAX-Enhanced:
+    plex_all: true
+    sort_title: +01_09_<<collection_name>>
+    url_poster: https://i.imgur.com/1x2Uvy0.png
+    filters:
+      filepath.regex: (IMAX Enhanced)
+
+  Remux:
+    plex_all: true
+    sort_title: +01_09_<<collection_name>>
+    url_poster: https://i.imgur.com/G5jNWnH.png
+    filters:
+      filepath.regex: (HQ-Remux|LQ-Remux|Remux-2160p|Remux-1080p)
+
+  Encodes:
+    plex_all: true
+    sort_title: +01_09_<<collection_name>>
+    url_poster: https://i.imgur.com/vdACVQ2.png
+    filters:
+      filepath.regex: (HQ2|LQ2)
+      
+  WEB-DL:
+    plex_all: true
+    sort_title: +01_09_<<collection_name>>
+    url_poster: https://i.imgur.com/UgQ4NGu.png
+    filters:
+      filepath.regex: (HQ-WEBDL|LQ-WEBDL|WEBDL|WEBRip)
+      
+  4K-Remux:
+    plex_search:
+      all:
+        resolution: 4K
+    sort_title: +01_09_<<collection_name>>
+    url_poster: https://i.imgur.com/mkffQKH.jpg
+    filters:
+      filepath.regex: (HQ-Remux|LQ-Remux|Remux-2160p)
+      
+  FHD-Remux:
+    plex_search:
+      all:
+        resolution: 1080p
+    sort_title: +01_09_<<collection_name>>
+    url_poster: https://i.imgur.com/U3en86q.png
+    filters:
+      filepath.regex: (HQ-Remux|LQ-Remux|Remux-1080p)
+
+  4K-Encodes:
+    plex_search:
+      all:
+        resolution: 4K
+    sort_title: +01_09_<<collection_name>>
+    url_poster: https://i.imgur.com/B8DFG8h.png
+    filters:
+      filepath.regex: (HQ2|LQ2)
+
+  FHD-Encodes:
+    plex_search:
+      all:
+        resolution: 1080p
+    sort_title: +01_09_<<collection_name>>
+    url_poster: https://i.imgur.com/nfx5UR5.png
+    filters:
+      filepath.regex: (HQ2|LQ2)
+     
