--- a/plex/pmm/collections/genres/shows.yml
+++ b/plex/pmm/collections/genres/shows.yml
@@ -1,25 +1,405 @@
-external_templates:
-  - repo: templates/collections
-  - repo: templates/dynamic_collections
-
+---
+templates:
+  Collection:
+    optional:
+      - show
+      - poster
+    tvdb_show: <<show>>
+    url_poster: <<poster>>
+    sync_mode: sync
+    sort_title: "!015_<<collection_name>>"
 collections:
-
-  ### Genres
-  "🔍 A Real-Life Whodunnit":
-    template: { name: Genre }
-    name_mapping: "True Crime Collection"
-    summary: "True crime documentaries"
-    trakt_list:
-      - https://trakt.tv/users/lish408/lists/true-crime-documentary-series-film
-    collection_order: random
-    visible_home: false
-    visible_shared: true
-
+  All-Time Top Shows:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/WhoDat104/Genres/main/All-Time%20Top%20Shows.jpg
+    sort_title: "!015_100"
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre.not: documentary
+  Action:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Action.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: action
+        genre.not: documentary
+  Adult Cartoons:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Adult%20Cartoons.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: animation
+        genre.not: documentary, family
+  Adventure:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Adventure.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: adventure
+        genre.not: documentary
+  Biography:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Biography.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: biography
+  Children's Cartoons:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Children's%20Cartoons.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: animation, family
+        genre.not: documentary
+  Comedy:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Comedy.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: comedy
+        genre.not: documentary
+  Crime:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Crime.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: crime
+        genre.not: documentary
+  Documentary:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Documentary.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: documentary
+  Drama:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Drama.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: drama
+        genre.not: documentary
+  Family:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Family.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: family
+        genre.not: animation, documentary
+  Fantasy:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Fantasy.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: fantasy
+        genre.not: animation, documentary
+  Funny Sci-Fi:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Funny%20Sci-Fi.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: comedy, science fiction
+        genre.not: documentary
+  History:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/History.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: history
+        genre.not: documentary
+  Horror:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Horror.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: horror
+        genre.not: documentary
+  Musical:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Musical.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: musical
+        genre.not: documentary
+  Mystery:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Mystery.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: mystery
+        genre.not: documentary
+  News:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/News.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: news
+        genre.not: documentary
+  Reality:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Reality.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: reality
+        genre.not: documentary
+  Romance:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Romance.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: romance
+        genre.not: documentary
+  Science Fiction:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Science%20Fiction.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: science fiction
+        genre.not: documentary
+  Sport:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Sport.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: sport
+        genre.not: documentary
+  Thriller:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Thriller.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: thriller
+        genre.not: documentary
+  War & Politics:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/War%20%26%20Politics.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: war
+        genre.not: documentary
+  Western:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Western.jpg
+    smart_filter:
+      sort_by: audience_rating.desc
+      all:
+        genre: western
+        genre.not: documentary
+  Collection:
+    optional:
+      - poster
+    url_poster: <<poster>>
+    sync_mode: sync
+    radarr_add_missing: false
+    sonarr_add_missing: false
+    sort_title: "!017_<<collection_name>>"
+    collection_order: release.desc
+  America:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/America.jpg
+    imdb_list: https://www.imdb.com/list/ls567617875/
+    tvdb_show: 309958, 342167, 321784
+  Animal:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Animal.jpg
+    imdb_list: https://www.imdb.com/list/ls567611777/
+    tvdb_show: 231181, 302286, 365318, 397323, 380404, 414372, 423716, 342167, 354527
+  Apocalypse Documentary:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Apocalypse.jpg
+    imdb_list: https://www.imdb.com/list/ls567611328/
+    tvdb_show: 101421, 279117
+  The Arts:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/The%20Arts.jpg
+    imdb_list: https://www.imdb.com/list/ls567611610/
+    tvdb_show: 362158, 353954, 418474, 266866
+  Building:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Building.jpg
+    imdb_list: https://www.imdb.com/list/ls567611261/
+    tvdb_show: 400435, 280472, 363422, 269355, 379326
+  Conspiracy:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Conspiracy.jpg
+    imdb_list: https://www.imdb.com/list/ls567611457/
+    tvdb_show: 37043, 111931, 287495, 386899
+  Dinosaur:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Dinosaur.jpg
+    imdb_list: https://www.imdb.com/list/ls567611901/
+    tvdb_show: 419593, 416319
+  Engineering:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Engineering.jpg
+    imdb_list:
+      - https://www.imdb.com/list/ls567611972/
+      - https://www.imdb.com/list/ls567611261/
+      - https://www.imdb.com/list/ls567611821/
+    tvdb_show: 410587, 375980, 370754, 369458, 345959, 122401, 280472, 282106,
+      370754, 400435, 399511, 420420
+  Engineering Disaster:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Engineering%20Disaster.jpg
+    imdb_list: https://www.imdb.com/list/ls567611821/
+    tvdb_show: 410587, 375980, 370754, 369458, 345959
+  Fringe:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Fringe.jpg
+    imdb_list:
+      - https://www.imdb.com/list/ls567613015/
+      - https://www.imdb.com/list/ls567611457/
+      - https://www.imdb.com/list/ls567616578/
+      - https://www.imdb.com/list/ls567637035/
+    tvdb_show: 37043, 111931, 287495, 386899, 261380, 111931, 255855, 417262,
+      290249, 370439, 336514, 413801, 111931, 311398, 255855, 370439, 376545,
+      420534
+  History Documentary:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/History.jpg
+    imdb_list: https://www.imdb.com/list/ls567613721/
+    tvdb_show: 84970, 119811, 290249, 136411, 311398, 287495, 362158, 356885,
+      400435, 418474, 413801, 421687, 361079, 420420, 80620, 376545, 360852,
+      427595, 363422, 355566, 420534, 269355
+  Human Body:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Human%20Body.jpg
+    imdb_list: https://www.imdb.com/list/ls567613933/
+    tvdb_show: 370439, 324346, 333111
+    tmdb_show: 207778
+  Manufacturing:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Manufacturing.jpg
+    imdb_list: https://www.imdb.com/list/ls567613987/
+    tvdb_show: 421687, 399511
+  Nature:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Nature.jpg
+    imdb_list:
+      - https://www.imdb.com/list/ls567613846/
+      - https://www.imdb.com/list/ls567611777/
+      - https://www.imdb.com/list/ls567611901/
+      - https://www.imdb.com/list/ls567616526/
+      - https://www.imdb.com/list/ls567616754/
+      - https://www.imdb.com/list/ls567637089/
+    tvdb_show: 231181, 302286, 365318, 397323, 380404, 414372, 423716, 342167,
+      354527, 419593, 416319, 268119, 388660, 356885, 333247, 387478, 136411,
+      377071, 390520, 269320, 255951, 286699, 370598, 80865, 419048, 398721,
+      433852
+  Paranormal:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Paranormal.jpg
+    imdb_list: https://www.imdb.com/list/ls567616578/
+    tvdb_show: 261380
+  Plant:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Plant.jpg
+    imdb_list: https://www.imdb.com/list/ls567616526/
+    tvdb_show: 298146
+  Space:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Space.jpg
+    imdb_list:
+      - https://www.imdb.com/list/ls567616754/
+      - https://www.imdb.com/list/ls567637035/
+    tvdb_show: 377071, 364784
+  Sport Documentary:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Sport.jpg
+    imdb_list: https://www.imdb.com/list/ls567616746/
+    tvdb_show: 362158, 398117
+  Technology:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Technology.jpg
+    imdb_list: https://www.imdb.com/list/ls567616111/
+    tvdb_show: 122401, 362158, 282106, 358433, 410168, 417262
+  True Crime:
+    url_poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/True%20Crime.jpg
+    sort_title: "!017_True Crime"
+    smart_filter:
+      sort_by: year.asc
+      all:
+        genre: crime, documentary
+  UFO:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Ufo.jpg
+    imdb_list: https://www.imdb.com/list/ls567637035/
+    tvdb_show: 111931, 255855
+  Weather:
+    template:
+      name: Collection
+      poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/genre/Weather.jpg
+    imdb_list: https://www.imdb.com/list/ls567637089/
+    tvdb_show: 390520, 269320, 255951, 286699, 370598, 80865, 419048
 dynamic_collections:
-  ## Use DC as suffix to avoid name conflicts with static collections
-  ## These get generated in the order they are listed here, so put the more intensive ones at the bottom
-
-  Per-Genre DC Shows: # mapping name does not matter just needs to be unique
+  Per-Genre DC Shows:
     type: genre
     exclude:
       - Action/Adventure
