--- a/plex/pmm/collections/genres/movies.yml
+++ b/plex/pmm/collections/genres/movies.yml
@@ -3,226 +3,196 @@ external_templates:
   - repo: templates/dynamic_collections
 
 collections:
-  "🎤 What's The Deal With Airplane Food?":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Stand-Up Comedy Collection"
-    summary: "Some of the best stand-up you'll ever see."
+
+  ### Genres
+
+  # 1. Drama
+  "Drama":
+    template: { name: Genre }
+    name_mapping: "Drama Collection"
+    summary: "Drama films"
+    imdb_list:
+      - https://www.imdb.com/list/ls063990910/
+    collection_order: random
+    visible_home: false
+    visible_shared: true
+
+  # 2. Action
+  "Action":
+    template: { name: Genre }
+    name_mapping: "Action Collection"
+    summary: "Action films"
+    imdb_list:
+      - https://www.imdb.com/list/ls063877595/?ref_=otl_5
+    collection_order: random
+    visible_home: false
+    visible_shared: true
+
+  # 3. Comedy
+  "Comedy":
+    template: { name: Genre }
+    name_mapping: "Comedy Collection"
+    summary: "Comedy films"
     trakt_list:
       - https://trakt.tv/users/lish408/lists/stand-up-comedy-specials
     collection_order: random
-    visible_library: true
-    visible_home: true
+    visible_home: false
     visible_shared: true
 
-  "😜 Spoofs and Parodies":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Spoof and Parody Films Collection"
-    summary: "Imitation is the sincerest form of flattery"
-    trakt_list:
-      - https://trakt.tv/users/majeed_pk/lists/spoof-parody-films
+  # 4. Sci-Fi
+  "Sci-Fi":
+    template: { name: Genre }
+    name_mapping: "Sci-Fi Collection"
+    summary: "Science Fiction films"
+    imdb_list:
+      - https://www.imdb.com/list/ls063875291/
     collection_order: random
-    visible_library: true
-    visible_home: true
+    visible_home: false
     visible_shared: true
 
-  "👩‍❤️‍💋‍👨 Rom-com Central":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Romantic Comedies Collection"
-    summary: "Rotten Tomatoes' best romantic comedies of all time"
+  # 5. Horror
+  "Horror":
+    template: { name: Genre }
+    name_mapping: "Horror Collection"
+    summary: "Horror films"
+    imdb_list:
+      - https://www.imdb.com/list/ls086170067/?ref_=otl_2
+    collection_order: random
+    visible_home: false
+    visible_shared: true
+
+  # 6. Romance
+  "Romance":
+    template: { name: Genre }
+    name_mapping: "Romance Collection"
+    summary: "Romance films"
     trakt_list:
       - https://trakt.tv/users/lish408/lists/rotten-tomatoes-the-200-best-romantic-comedies-of-all-time
     collection_order: random
-    visible_library: true
-    visible_home: true
+    visible_home: false
     visible_shared: true
 
-  "🏀 Slam Dunk":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Sports Movies Collection"
-    summary: "The best sports movies, ever."
-    mdblist_list: https://mdblist.com/lists/hdlists/150-best-sports-movies-of-all-time
-    collection_order: random
-    visible_library: true
-    visible_home: false  # Not advertised on the home page
-    visible_shared: false  # Not advertised on the home page
-
-  "🚓 Get In Get Out":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Heist Movies Collection"
-    summary: "Don't forget about the getaway driver out front"
-    mdblist_list: https://mdblist.com/lists/hdlists/best-heist-movies-of-all-time
-    collection_order: random
-    visible_library: true
-    visible_home: false  # Not advertised on the home page
-    visible_shared: false  # Not advertised on the home page
-
-  "🎢 On The Edge Of Your Seat":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Thriller Movies Collection"
-    summary: "The suspense is killing us!"
-    imdb_search:
-      type: movie, short, tv_movie, tv_special
-      # keyword.any: "Psychological%20Thriller"
-      genre.any: thriller
-      rating.gte: 5.0
-    collection_order: random
-    visible_library: true
-    visible_home: false  # Not advertised on the home page
-    visible_shared: false  # Not advertised on the home page
-
-  "🤯 What a Twist!":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Plot Twist Movies Collection"
-    summary: "Bet you didn't see THAT coming..."
-    mdblist_list: https://mdblist.com/lists/hdlists/crazy-plot-twists
-    collection_order: random
-    visible_library: true
-    visible_home: false  # Not advertised on the home page
-    visible_shared: false  # Not advertised on the home page
-
-  "📗 Based On A True Story":
-    template: { name: Genre,
-                level: "++" }
-    summary: "Based on a true story"
+  # 7. Thriller
+  "Thriller":
+    template: { name: Genre }
+    name_mapping: "Thriller Collection"
+    summary: "Thriller films"
     trakt_list:
-      - https://trakt.tv/users/plexmetamanager/lists/movies-based-on-true-stories
+      - https://mdblist.com/lists/hdlists/best-heist-movies-of-all-time
     collection_order: random
-    visible_library: true
-    visible_home: true
+    visible_home: false
     visible_shared: true
 
-  "📖 The Book Was Better":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Based On A Book Collection"
-    summary: "Based on a book"
-    trakt_list:
-      - https://trakt.tv/users/plexmetamanager/lists/movies-based-on-books
-    collection_order: random
-    visible_library: true
-    visible_home: true
-    visible_shared: true
-
-  "🕹️ Arrow In The Knee":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Video Game Movies Collection"
-    summary: "Based on a video game"
-    trakt_list:
-      - https://trakt.tv/users/plexmetamanager/lists/movies-based-on-video-games
-    collection_order: random
-    visible_library: true
-    visible_home: true
-    visible_shared: true
-
-  "💬 With Great Power...":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "With Great Power Collection"
-    summary: "Based on a comic book"
-    trakt_list:
-      - https://trakt.tv/users/plexmetamanager/lists/movies-based-on-comics
-    collection_order: random
-    visible_library: true
-    visible_home: true
-    visible_shared: true
-
-  "🔍 A Real-Life Whodunnit":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "True Crime Collection"
-    summary: "True crime documentaries"
+  # 8. Mystery
+  "Mystery":
+    template: { name: Genre }
+    name_mapping: "Mystery Collection"
+    summary: "Mystery films"
     trakt_list:
       - https://trakt.tv/users/lish408/lists/true-crime-documentary-series-film
     collection_order: random
-    visible_library: true
-    visible_home: true
+    visible_home: false
     visible_shared: true
 
-  "👨‍🍳 Bon Appetit":
-    template: { name: Genre,
-                level: "++" }
-    summary: "Mouth-watering movies"
+  # 9. Crime
+  "Crime":
+    template: { name: Genre }
+    name_mapping: "Crime Collection"
+    summary: "Crime films"
     trakt_list:
-      - https://trakt.tv/users/majeed_pk/lists/bon-appetit
+      - https://trakt.tv/users/lish408/lists/true-crime-documentary-series-film
     collection_order: random
-    visible_library: true
-    visible_home: false  # Not advertised on the home page
-    visible_shared: false  # Not advertised on the home page
+    visible_home: false
+    visible_shared: true
 
-  "🗎 Documentaries":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Documentaries Collection"
-    summary: "The top documentaries of all time"
+  # 10. Fantasy
+  "Fantasy":
+    template: { name: Genre }
+    name_mapping: "Fantasy Collection"
+    summary: "Fantasy films"
+    imdb_list:
+      - https://www.imdb.com/list/ls088139065/
+    collection_order: random
+    visible_home: false
+    visible_shared: true
+
+  # 11. Adventure
+  "Adventure":
+    template: { name: Genre }
+    name_mapping: "Adventure Collection"
+    summary: "Adventure films"
+    imdb_list:
+      - https://www.imdb.com/list/ls063871039/
+    collection_order: random
+    visible_home: false
+    visible_shared: true
+
+  # 13. Documentary
+  "Documentary":
+    template: { name: Genre }
+    name_mapping: "Documentary Collection"
+    summary: "Documentary films"
     trakt_list:
       - https://trakt.tv/users/majeed_pk/lists/documentaries
     collection_order: random
-    visible_library: true
-    visible_home: true
+    visible_home: false
     visible_shared: true
 
-  "🙂 Feel-Good Movies":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Feel Good Movies Collection"
-    summary: "The best feel-good movies of all time"
+  # 14. Family
+  "Family":
+    template: { name: Genre }
+    name_mapping: "Family Collection"
+    summary: "Family films"
     trakt_list:
       - https://trakt.tv/users/majeed_pk/lists/feelgood-movies
     collection_order: random
-    visible_library: true
-    visible_home: true
+    visible_home: false
     visible_shared: true
 
-  "🧘 Kick Back and Relax":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Chill Movies Collection"
-    summary: "The best movies for a lazy weekend afternoon"
-    trakt_list:
-      - https://trakt.tv/users/hdlists/lists/sunday-afternoon-movies?sort=rank,asc
+  # 16. War
+  "War":
+    template: { name: Genre }
+    name_mapping: "War Collection"
+    summary: "War films"
+    imdb_list:
+      - https://www.imdb.com/list/ls052424174/
     collection_order: random
-    schedule: weekly(saturday), weekly(sunday), weekly(monday)
-    visible_home: weekly(saturday), weekly(sunday)
-    visible_shared: weekly(saturday), weekly(sunday)
-    visible_library: weekly(saturday), weekly(sunday)
-
-  "🤪 The Weirdo's Videostore":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Weirdo Videostore Collection"
-    summary: "Cinema is strange."
-    trakt_list:
-      - https://trakt.tv/users/majeed_pk/lists/the-weirdo-s-videostore
-    collection_order: random
-    visible_library: true
-    visible_home: true
+    visible_home: false
     visible_shared: true
 
-  "⁉️ Controversial Cinema":
-    template: { name: Genre,
-                level: "++" }
-    name_mapping: "Controversial Cinema Collection"
-    summary: "The most edgy, crazy, disturbing, controversial, shocking, bizarre, scandalous and downright f***ed up films of all time!"
-    trakt_list:
-      - https://trakt.tv/users/majeed_pk/lists/dark-deeply-disturbing-controversial-shocking-bizarre-and-messed-up-films
+  # 18. History
+  "History":
+    template: { name: Genre }
+    name_mapping: "History Collection"
+    summary: "History films"
+    imdb_list:
+      - https://www.imdb.com/list/ls567613721/
     collection_order: random
-    visible_library: false  # This is a hidden collection due to the nature of the content
-    visible_home: false  # Not advertised on the home page
-    visible_shared: false  # Not advertised on the home page
+    visible_home: false
+    visible_shared: true
 
+  # 19. Biography
+  "Animation":
+    template: { name: Genre }
+    name_mapping: "Animation Collection"
+    summary: "Animation films"
+    imdb_list:
+      - https://www.imdb.com/list/ls052725672/
+    collection_order: random
+    visible_home: false
+    visible_shared: true
 
-dynamic_collections:
-  ## Use DC as suffix to avoid name conflicts with static collections
-  ## These get generated in the order they are listed here, so put the more intensive ones at the bottom
-
+  # 20. Sport
+  "Romantic Comedy":
+    template: { name: Genre }
+    name_mapping: "Romantic Compedy Collection"
+    summary: "Romantic Comedy films"
+    trakt_list:
+      - https://trakt.tv/users/lish408/lists/rotten-tomatoes-the-200-best-romantic-comedies-of-all-time
+    collection_order: random
+    visible_home: false
+    visible_shared: true
+    
   Per-Genre DC Movies: # mapping name does not matter just needs to be unique
     type: genre
     exclude:
