--- a/plex/pmm/collections/best/shows.yml
+++ b/plex/pmm/collections/best/shows.yml
@@ -3,7 +3,7 @@ external_templates:
   - repo: templates/dynamic_collections
 
 collections:
-  IMDB Top 250:
+  IMDB Top 250 TV:
     imdb_chart: top_shows
     url_poster: https://i.imgur.com/X3NNWy4.png
     sort_title: +01_06_IMDB top 250 tv shows
@@ -13,21 +13,20 @@ collections:
     schedule:
      - weekly(sunday)
      - hourly(02)
-  HDR:
-    plex_search:
-      all:
-        resolution: 4K
-        hdr: true
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://theposterdb.com/api/assets/224737/view?performed_by=flk203
-    filters:
-      has_dolby_vision: false
+  #HDR:
+  #   plex_search:
+  #    all:
+  #      resolution: 4K
+  #      hdr: true
+  #  sort_title: +01_09_<<collection_name>>
+  #  url_poster: https://theposterdb.com/api/assets/224737/view?performed_by=flk203
+  #  filters:
+  #    has_dolby_vision: false
 
   1080p:
     plex_search:
       all:
         resolution: 1080p
-        hdr: false
     sort_title: +01_09_<<collection_name>>
     url_poster: https://github.com/meisnate12/Plex-Meta-Manager-Images/blob/master/resolution/1080.jpg?raw=true
     filters:
@@ -40,59 +39,60 @@ collections:
     filters:
       filepath.regex: (IMAX Enhanced)
 
-  Remux:
-    plex_all: true
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://github.com/meisnate12/Plex-Meta-Manager-Images/blob/master/video_format/remux.jpg?raw=true
-    filters:
-      filepath.regex: (HQ-Remux|LQ-Remux|Remux-2160p|Remux-1080p)
+  #Remux 1080P:
+  # plex_all: true
+  #  sort_title: +01_09_<<collection_name>>
+  #  url_poster: https://github.com/meisnate12/Plex-Meta-Manager-Images/blob/master/video_format/remux.jpg?raw=true
+  #  filters:
+  #    filepath.regex: (HQ-Remux|LQ-Remux|Remux-1080p)
 
-  Encodes:
-    plex_all: true
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://i.imgur.com/vdACVQ2.png
-    filters:
-      filepath.regex: (HQ2|LQ2)
+  #Encodes:
+  #  plex_all: true
+  #  sort_title: +01_09_<<collection_name>>
+  #  url_poster: https://i.imgur.com/vdACVQ2.png
+  #  filters:
+  #    filepath.regex: (HQ2|LQ2)
       
-  WEB-DL:
-    plex_all: true
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://github.com/meisnate12/Plex-Meta-Manager-Images/blob/master/video_format/web.jpg?raw=true
-    filters:
-      filepath.regex: (HQ-WEBDL|LQ-WEBDL|WEBDL|WEBRip)
+  #WEB-DL:
+  #  plex_all: true
+  #  sort_title: +01_09_<<collection_name>>
+  #  url_poster: https://github.com/meisnate12/Plex-Meta-Manager-Images/blob/master/video_format/web.jpg?raw=true
+  #  filters:
+  #   filepath.regex: (HQ-WEBDL|LQ-WEBDL|WEBDL|WEBRip)
       
-  4K-Remux:
+  4K:
     plex_search:
       all:
         resolution: 4K
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://i.imgur.com/mkffQKH.jpg
-    filters:
-      filepath.regex: (HQ-Remux|LQ-Remux|Remux-2160p)
+     sort_title: +01_09_<<collection_name>>
+     url_poster: https://theposterdb.com/api/assets/220482/view
+     filters:
+       has_dolby_vision: false
+       filepath.regex: (HQ-Remux|LQ-Remux|Remux-2160p|2160p|4K)
       
-  FHD-Remux:
-    plex_search:
-      all:
-        resolution: 1080p
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://i.imgur.com/U3en86q.png
-    filters:
-      filepath.regex: (HQ-Remux|LQ-Remux|Remux-1080p)
+  #FHD-Remux:
+  #  plex_search:
+  #    all:
+  #      resolution: 1080p
+  #  sort_title: +01_09_<<collection_name>>
+  #  url_poster: https://i.imgur.com/U3en86q.png
+  #  filters:
+  #    filepath.regex: (HQ-Remux|LQ-Remux|Remux-1080p)
 
-  4K-Encodes:
-    plex_search:
-      all:
-        resolution: 4K
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://theposterdb.com/api/assets/220482/view
-    filters:
-      filepath.regex: (HQ2|LQ2)
+  #4K-Encodes:
+  #  plex_search:
+  #    all:
+  #      resolution: 4K
+  #  sort_title: +01_09_<<collection_name>>
+  #  url_poster: https://theposterdb.com/api/assets/220482/view
+  #  filters:
+  #    filepath.regex: (HQ2|LQ2)
 
-  FHD-Encodes:
-    plex_search:
-      all:
-        resolution: 1080p
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://theposterdb.com/api/assets/220483/view
-    filters:
-      filepath.regex: (HQ2|LQ2)
+  #FHD-Encodes:
+  #  plex_search:
+  #    all:
+  #      resolution: 1080p
+  #  sort_title: +01_09_<<collection_name>>
+  #  url_poster: https://theposterdb.com/api/assets/220483/view
+  #  filters:
+      
