--- a/plex/pmm/collections/best/movies.yml
+++ b/plex/pmm/collections/best/movies.yml
@@ -107,21 +107,10 @@ collections:
 #########################################################
 #    4K Dolby Vision, 4K HDR & 1080P FHD Collections    #
 #########################################################
-  HDR:
-    plex_search:
-      all:
-        resolution: 4K
-        hdr: true
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://theposterdb.com/api/assets/224737/view?performed_by=flk203
-    filters:
-      has_dolby_vision: false
-
   1080p:
     plex_search:
       all:
         resolution: 1080p
-        hdr: false
     sort_title: +01_09_<<collection_name>>
     url_poster: https://github.com/meisnate12/Plex-Meta-Manager-Images/blob/master/resolution/1080.jpg?raw=true
     filters:
@@ -133,61 +122,12 @@ collections:
     url_poster: https://theposterdb.com/api/assets/224736/view?performed_by=flk203
     filters:
       filepath.regex: (IMAX Enhanced)
-
-  Remux:
-    plex_all: true
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://github.com/meisnate12/Plex-Meta-Manager-Images/blob/master/video_format/remux.jpg?raw=true
-    filters:
-      filepath.regex: (HQ-Remux|LQ-Remux|Remux-2160p|Remux-1080p)
-
-  Encodes:
-    plex_all: true
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://i.imgur.com/vdACVQ2.png
-    filters:
-      filepath.regex: (HQ2|LQ2)
-      
-  WEB-DL:
-    plex_all: true
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://github.com/meisnate12/Plex-Meta-Manager-Images/blob/master/video_format/web.jpg?raw=true
-    filters:
-      filepath.regex: (HQ-WEBDL|LQ-WEBDL|WEBDL|WEBRip)
-      
-  4K-Remux:
-    plex_search:
-      all:
-        resolution: 4K
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://i.imgur.com/mkffQKH.jpg
-    filters:
-      filepath.regex: (HQ-Remux|LQ-Remux|Remux-2160p)
-      
-  FHD-Remux:
-    plex_search:
-      all:
-        resolution: 1080p
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://i.imgur.com/U3en86q.png
-    filters:
-      filepath.regex: (HQ-Remux|LQ-Remux|Remux-1080p)
-
-  4K-Encodes:
+  4k:
     plex_search:
       all:
         resolution: 4K
     sort_title: +01_09_<<collection_name>>
     url_poster: https://theposterdb.com/api/assets/220482/view
     filters:
-      filepath.regex: (HQ2|LQ2)
-
-  FHD-Encodes:
-    plex_search:
-      all:
-        resolution: 1080p
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://theposterdb.com/api/assets/220483/view
-    filters:
-      filepath.regex: (HQ2|LQ2)
+      filepath.regex: (Remux-2160p|2160p|4K)
      
