--- a/plex/pmm/collections/recommendations/movies.yml
+++ b/plex/pmm/collections/recommendations/movies.yml
@@ -12,6 +12,7 @@ collections:
       - https://trakt.tv/users/flk203/lists/movies-recommendations-couchmoney-tv?sort=popularity,asc
       - https://trakt.tv/users/flk203/lists/movies-trending-couchmoney-tv?sort=rank,asc
     collection_order: release.desc
+    poster_url: https://i.imgur.com/susZuCj.png
     visible_library: true
     visible_home: true
     visible_shared: true
