--- a/plex/pmm/collections/new/movies.yml
+++ b/plex/pmm/collections/new/movies.yml
@@ -15,6 +15,7 @@ collections:
         # Movie added in the last 7 days
         added: 7
         content_rating.not: NR, X, MA-17, Not Rated
+    poster_url: https://i.imgur.com/jUMSikZ.png
     visible_library: true
     visible_home: true
     visible_shared: true
