--- a/plex/pmm/collections/trending/movies.yml
+++ b/plex/pmm/collections/trending/movies.yml
@@ -11,6 +11,7 @@ collections:
     trakt_list:
       - https://trakt.tv/users/nwithan8/lists/in-cinemas-united-states
     collection_order: release.desc
+    poster_url: https://i.imgur.com/LRH1tFr.png
     visible_library: true
     visible_home: true
     visible_shared: true
@@ -22,9 +23,10 @@ collections:
     summary: "The hottest movies right now"
     trakt_chart:
       chart: trending
-      limit: 30
+      limit: 50
     collection_order: custom
     sync_mode: sync
+    poster_url: https://i.imgur.com/6jZNd6W.png
     visible_library: true
     visible_home: true
     visible_shared: true
@@ -37,6 +39,7 @@ collections:
     libraries: "Movies"  # Only consider movies in the Movies library (even when building this collection for 4K Movies)
     sync_mode: sync
     collection_order: custom
+    poster_url: https://i.imgur.com/vyFG5o7.png
     tautulli_popular:
       list_days: 30
       list_size: 15
