--- a/plex/pmm/collections/new/movies.yml
+++ b/plex/pmm/collections/new/movies.yml
@@ -6,7 +6,8 @@ collections:
   ### New Content
   "➕ Added This Week":
     template: { name: New,
-                level: "++" }
+                level: "++",
+                poster_url: https://i.imgur.com/jUMSikZ.png}
     summary: "Movies now playing on Plex"
     smart_filter:
       type: movies
@@ -15,7 +16,6 @@ collections:
         # Movie added in the last 7 days
         added: 7
         content_rating.not: NR, X, MA-17, Not Rated
-    poster_url: https://i.imgur.com/jUMSikZ.png
     visible_library: true
     visible_home: true
     visible_shared: true
