--- a/plex/pmm/collections/new/movies.yml
+++ b/plex/pmm/collections/new/movies.yml
@@ -6,9 +6,9 @@ collections:
   ### New Content
   "➕ Added This Week":
     template: { name: New,
-                level: "++",
-                poster_url: https://i.imgur.com/jUMSikZ.png}
+                level: "++"}
     summary: "Movies now playing on Plex"
+    url_poster: poster_url: https://i.imgur.com/jUMSikZ.png
     smart_filter:
       type: movies
       sort_by: release.desc
