--- a/plex/pmm/collections/trending/movies.yml
+++ b/plex/pmm/collections/trending/movies.yml
@@ -6,21 +6,20 @@ collections:
   # Box Office
   "🍿 At The Box Office":
     template: { name: New,
-                level: "+++",
-                poster_url: https://i.imgur.com/LRH1tFr.png}
+                level: "+++" }
     summary: "Now playing on a screen near you"
     trakt_list:
       - https://trakt.tv/users/nwithan8/lists/in-cinemas-united-states
     collection_order: release.desc
     visible_library: true
+    url_poster: https://i.imgur.com/LRH1tFr.png
     visible_home: true
     visible_shared: true
 
   # Trending online
   "📈 Trending Now":
     template: { name: Chart,
-                level: "+++",
-                poster_url: https://i.imgur.com/6jZNd6W.png }
+                level: "+++" }
     summary: "The hottest movies right now"
     trakt_chart:
       chart: trending
@@ -28,18 +27,19 @@ collections:
     collection_order: custom
     sync_mode: sync
     visible_library: true
+    url_poster: https://i.imgur.com/6jZNd6W.png
     visible_home: true
     visible_shared: true
 
   # Trending on Plex
   "👀 What Everyone Is Watching":
     template: { name: Chart,
-                level: "++",
-                poster_url: https://i.imgur.com/vyFG5o7.png}
+                level: "++" }
     summary: "What other subscribers are checking out"
     libraries: "Movies"  # Only consider movies in the Movies library (even when building this collection for 4K Movies)
     sync_mode: sync
     collection_order: custom
+    url_poster: https://i.imgur.com/vyFG5o7.png
     tautulli_popular:
       list_days: 30
       list_size: 15
