--- a/plex/pmm/collections/studio/palestine.yml
+++ b/plex/pmm/collections/studio/palestine.yml
@@ -1,29 +1,21 @@
 templates:
   journeyman_collection:
-    optional:
-      - my_collection_poster
     smart_filter:
       sort_by: title.asc
-      all:
+      any:
         genre: Journeyman
-    url_poster: <<my_collection_poster>>
+    url_poster: https://i.imgur.com/FZ1twh2.jpeg
   ei_collection:
-    optional:
-      - my_collection_poster
     smart_filter:
       sort_by: title.asc
-      all:
+      any:
         genre: Electronic Intifada
-    url_poster: <<my_collection_poster>>
+    url_poster: https://i.imgur.com/49iDToy.png
 
 dynamic_collections:
   Journeyman Pictures:         # mapping name does not matter just needs to be unique
     type: genre
     template: journeyman_collection
-    template_variables: 
-      my_collection_poster: https://i.imgur.com/FZ1twh2.jpeg
   Electronic Intifada:         # mapping name does not matter just needs to be unique
     type: genre
     template: ei_collection
-    template_variables: 
-      my_collection_poster: https://i.imgur.com/49iDToy.png
